<resources>
    <string name="app_name">SMS Covid</string>
    <string name="title_activity_welcome_page">WelcomePage</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="welcome_title">ΚΑΛΩΣΟΡΙΣΑΤΕ</string>
    <string name="welcome_subtitle">Για να προχωρήσετε στην αποστολή SMS μηνυμάτων, παρακαλώ συνδεθείτε.</string>
    <string name="signin_button">ΣΥΝΔΕΣΗ</string>
    <string name="register_button">ΕΓΓΡΑΦΗ</string>
    <string name="register_subtitle">Συμπληρώστε όλα τα παρακάτω πεδία με τα στοιχεία σας για να πραγματοποιήσετε την εγγραφή.</string>
    <string name="sign_subtitle">Συμπληρώστε όλα τα παρακάτω πεδία με τα στοιχεία σας για να πραγματοποιήσετε την σύνδεση.</string>
    <string name="no_account">Δεν έχεις λογαριασμό;</string>
    <string name="success">Επιτυχία σύνδεσης</string>
    <string name="wait">Παρακαλώ περιμένετε</string>
    <string name="fullname">Ονοματεπώνυμο</string>
    <string name="firstname">Όνομα</string>
    <string name="lastname">Επώνυμο</string>
    <string name="email">Email</string>
    <string name="password">Κωδικός</string>
    <string name="address">Διεύθυνση</string>
    <string name="continue_button">ΣΥΝΕΧΕΙΑ</string>
    <string name="empty_text">Παρακαλώ, συμπληρώστε όλα τα πεδία.</string>
    <string name="loading">Φόρτωση...</string>
    <string name="send">ΑΠΟΣΤΟΛΗ</string>
    <string name="smscodes">Κωδικοί SMS</string>
    <string name="smscode">Κωδικός SMS</string>
    <string name="title">Τίτλος</string>
    <string name="code">ΚΩΔΙΚΟΣ</string>
    <string name="codeId">Κωδικός</string>
    <string name="add">ΠΡΟΣΘΗΚΗ</string>
    <string name="delete">ΔΙΑΓΡΑΦΗ</string>
    <string name="create">ΔΗΜΙΟΥΡΓΙΑ</string>
    <string name="edit">ΕΠΕΞΕΡΓΑΣΙΑ</string>
    <string name="update">ΕΝΗΜΕΡΩΣΗ</string>
    <string name="warning">ΠΡΟΣΟΧΗ!</string>
    <string name="profile">Προφίλ</string>
    <string name="history">Ιστορικό</string>
    <string name="location">Τοποθεσία</string>
    <string name="help">Βοήθεια</string>
    <string name="signout">Αποσύνδεση</string>
    <string name="question">Είστε σίγουροι ότι θέλετε να διαγράψετε αυτόν τον κωδικό SMS;</string>
    <string name="yes">ΝΑΙ</string>
    <string name="no">ΟΧΙ</string>
    <string name="unknown">Άγνωστο</string>
    <string name="register_underline"><u>ΕΓΓΡΑΦΗ</u></string>
    <string name="keep_logged_in">Μόνιμη σύνδεση</string>
    <string name="forgotPassword"><u>Ξέχασα τον κωδικό μου</u></string>
    <string name="forgot_email_empty">Συμπληρώστε το email σας στο παραπάνω πεδίο και πατήστε ξανά</string>
    <string name="forgot_success">Θα λάβετε e-mail για την επαναφορά του κωδικού σας</string>
    <string name="code_not_exist">Δεν υπάρχει κωδικός με αυτόν τον αριθμό</string>
    <string name="edit_profile">Επεξεργασία προφίλ</string>
    <string name="permission">Πρέπει να παραχωρήσετε άδεια για την αποστολή του μηνύματος</string>
    <string name="sms_non_selected">Δεν έχετε επιλέξει κωδικό SMS!</string>
    <string name="no_connection">Δεν υπάρχει σύνδεση στο διαδίκτυο!</string>
    <string name="send_success">Επιτυχία αποστολής</string>
    <string name="command_error">Λανθασμένη εντολή!</string>
    <string name="go_profile">Μετάβαση στο προφίλ</string>
    <string name="go_codes">Μετάβαση στους κωδικούς S M S</string>
    <string name="go_help">Μετάβαση στη βοήθεια</string>
    <string name="google_maps_unknown">Η τοποθεσία είναι άγνωστη</string>
    <string name="main_menu">Κεντρικό μενού</string>
    <string name="main_menu_1">Ελέγξε αν τα στοιχεία σας είναι σωστά και στην συνέχεια επιλέξτε ποιον κωδικό θέλετε να στείλετε. Αφού επιλέξετε τον κωδικό, πατήστε το κουμπί <b><i>Αποστολή</i></b>.</string>
    <string name="profile_1">Για να μεταβείτε στο προφίλ σας πατήστε στην καρτέλα με τα στοιχεία σας ή επιλέξτε την επιλογή <b><i>Προφίλ</i></b> από το μενού πάνω δεξιά στο κεντρικό μενού.</string>
    <string name="profile_2">Εκεί μπορείτε να επεξεργαστείτε τα στοιχεία σας αλλάζοντας το ονοματεπώνυμό και την διεύθυνση σας πατώντας το κουμπί με το σύμβολο του μολυβιού.</string>
    <string name="profile_3">Επίσης εδώ είναι διαθέσιμο και το ιστορικό σας.</string>
    <string name="smscodes_1">Για να μεταβείτε στις ρυθμίσεις των κωδικών SMS επιλέξτε την επιλογή <b><i>Κωδικοί SMS</i></b> από το μενού πάνω δεξιά στο κεντρικό μενού.</string>
    <string name="smscodes_2">Εκεί μπορείτε να επεξεργαστείτε έναν κωδικό πατώντας το σύμβολο του μολυβιού ή να τον διαγράψετε πατώντας το σύμβολο του κάδου.</string>
    <string name="smscodes_3">Τέλος μπορείτε να προσθέσετε ένα νέο κωδικό από την αρχή.</string>
    <string name="voice_commands">Φωνητικές εντολές</string>
    <string name="voice_commands_1">Οι φωνητικές εντολές ενεργοποιούνται πατώντας το κουμπί με το μικρόφωνο κάτω δεξιά στην οθόνη.</string>
    <string name="voice_commands_2">Στο κεντρικό μενού μπορείτε να πείτε <b><i>Προφίλ</i></b>, <b><i>Κωδικοί SMS</i></b>, <b><i>Βοήθεια</i></b>, <b><i>Αποσύνδεση</i></b> για να μεταβείτε στην αντίστοιχη σελίδα. Για να την αποστολή μηνύματος πείτε <b><i>Αποστολή Χ</i></b>, όπου Χ είναι ο αριθμός του κωδικού SMS.</string>
    <string name="voice_commands_3">Στο προφίλ μπορείτε να πείτε <b><i>Επεξαργασία</i></b> για να ανοίξει το μενού της επεξεργασίας του προφίλ.</string>
    <string name="voice_commands_4">Στους κωδικούς SMS μπορείτε να πείτε <b><i>Προσθήκη</i></b> για να προσθέσετε έναν νέο κωδικό, <b><i>Επεξεργασία Χ</i></b> ή <b><i>Διαγραφή Χ</i></b>, όπου Χ είναι ο αριθμός του κωδικού SMS.</string>
    <string name="delete_code">Πείτε διαγραφή και μετά τον κωδικό</string>
    <string name="edit_code">Πείτε επεξεργασία και μετά τον κωδικό</string>
    <string name="edit_low">Επεξεργασία</string>
    <string name="delete_low">Διαγραφή</string>
    <string name="add_low">Προσθήκη</string>
</resources>